# XiaoQing

./: .gitignore  Dockerfile  HandDraw.py  IDcode.txt  QA.json  README.md  abbr.py  adnmb.py  adnmblist.json  adssearch.py  alpha.py  animelines.py  api.json  astrodict.py  bashshell.py  biliatob.py  bilibili_hot.py  bingmap.py  bot.py  caiyun.py  cctv6list.py  clean_pycache.sh  determine.py  getnetinfo.py  idcode.py  jpnb.py  learnQA.py  localip.py  main.py  maoxuan_pred.py  memo.json  memo.py  moedict.py  monitor.py  pyproject.toml  pytest.ini  requirements.txt  run-bot.vbs  runbot.py  search.py  (+8 more)
.github/workflows/: tests.yml
astrodict/: astrodict_191103ce.txt  astrodict_191103ec.txt
config/: config.json.example  secrets.json.example
core/: __init__.py  app.py  args.py  clock.py  config.py  constants.py  context.py  dispatcher.py  exceptions.py  interfaces.py  logging_config.py  message.py  metrics.py  models.py  onebot.py  plugin_base.py  plugin_manager.py  router.py  scheduler.py  server.py  session.py
docs/: 00-overview.md  01-getting-started.md  02-architecture.md  03-plugin-development.md  04-core-modules.md  05-api-reference.md  06-configuration.md  07-advanced.md  08-message-flow.md  09-plugins.md  README.md  product-suggestions-integrated.md
plugins/adnmb/: README.md  __init__.py  adapi.py  main.py  plugin.json  user.py
plugins/ads_paper/: README.md  ads_client.py  ai_commands.py  constants.py  llm_client.py  main.py  note_commands.py  paper_commands.py  plugin.json  storage.py
plugins/apod/: README.md  main.py  plugin.json
plugins/arxiv_filter/: README.md  arxiv_title_inference.py  arxiv_today.py  config.json  main.py  plugin.json  requirements.txt
plugins/astro_tools/: README.md  const.py  convert.py  coord.py  formula.py  main.py  obj.py  plugin.json  redshift.py  time.py
plugins/bot_core/: README.md  main.py  plugin.json
plugins/chat/: README.md  main.py  plugin.json
plugins/chime/: README.md  main.py  plugin.json
plugins/choice/: README.md  main.py  plugin.json
plugins/color/: MODULE_STRUCTURE.md  README.md  color.json  convert.py  data_manager.py  image_gen.py  main.py  plugin.json  query.py  stellar.py  stellar_colors.txt
plugins/dict/: README.md  main.py  plugin.json
plugins/earthquake/: README.md  main.py  plugin.json
plugins/echo/: README.md  main.py  plugin.json
plugins/github/: README.md  main.py  plugin.json
plugins/guess_number/: README.md  __init__.py  main.py  plugin.json
plugins/jupyter/: IMPROVEMENTS.md  README.md  __init__.py  jupyter_config.py  jupyter_manager.py  jupyter_models.py  main.py  plugin.json
plugins/memo/: README.md  main.py  plugin.json
plugins/minecraft/: README.md  __init__.py  connection.py  log_monitor.py  main.py  plugin.json  rcon.py
plugins/pendo/: ARCHITECTURE.md  Pendo个人时间与信息管理中枢.md  README.md  config.py  main.py  plugin.json  requirements.txt
plugins/qingpet/: AGENTS.md  QUICKSTART.md  README.md  __init__.py  main.py  plugin.json
plugins/qingssh/: README.md  __init__.py  config.py  handlers.py  main.py  message_formatter.py  path_resolver.py  plugin.json  session_handlers.py  ssh_manager.py  types.py  validators.py
plugins/shell/: IMPROVEMENTS.md  (+4 more)
si2cp/: langconv.py
tests/: conftest.py  run_all_tests.py  test_app.py  test_args.py  test_clock.py  test_config.py  test_constants.py  test_context.py  test_dispatcher.py  test_exceptions.py  test_interfaces.py  test_logging.py  test_message.py  test_metrics.py  test_models.py  test_onebot.py  test_plugin_base.py  test_router.py  test_scheduler.py  test_server.py  test_session.py
(+173 files in other folders)
